--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "packages/*"
   ],
   "engines": {
-    "node": "12.x",
-    "npm": "6.x",
+    "node": ">=12.x",
     "yarn": "1.x"
   },
   "resolutions": {
