--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "resolutions": {
     "@polkadot/api": "^1.15.1",
-    "@acala-network/api": "^0.3.1",
-    "@acala-network/types": "^0.3.1"
+    "@acala-network/api": "^0.4.0",
+    "@acala-network/types": "^0.4.0",
+    "@acala-network/app-util": "^0.4.0"
   },
   "scripts": {
     "start:dapp": "cd packages/apps && react-app-rewired start",
